Wed Nov 15 01:11:02 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/Makefile.am:

          Add Numeric_Limits.h to Header_Files section.

Tue Nov 14 18:42:18 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Gestalt.inl:
        * ace/Service_Gestalt.cpp:

          After a gestalt gets close()-ed it is still a valid instance
          however, because it is disassociated from its service repository
          the situation becomes another special case the gestalt
          implementation must account for.  This change is in addition to
          the bug fix introduced with the change from "Thu Nov 9 20:07:42
          UTC 2006".

Tue Nov 14 14:30:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Select_Reactor_T.cpp:
          Removed some not used macros that did cause problems when running
          FOCUS

Tue Nov 14 11:23:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Timer_Queue_T.cpp:
          Added hook for FOCUS, const improvement

Tue Nov 14 07:56:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Updated rtems information

Mon Nov 13 00:17:19 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Gestalt.cpp:

          Calling close() on a gestalt must not obliterate any static
          service registrations. Those may still be needed if the gestalts
          gets re-opened again, before its destructor runs.  This change
          fixes a problem (introduced with "Thu Nov 9 20:07:42 UTC 2006")
          which broke this invariant.

Sat Nov 11 18:37:12 UTC 2006  Chris Cleeland  <cleeland_c@ociweb.com>

        * ace/Service_Gestalt.cpp (find_processed_static_svc):

          Added a check at the beginning of this function that drops out
          if processed_static_svcs_ or the arg is a zero pointer.  This
          gets ride of core dumps in scoreboard builds running tests like