@@ -1,3 +1,15 @@
+Wed Nov 15 01:56:28 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>
+
+        * protocols/ace/HTBP/Makefile.am:
+        * protocols/ace/RMCast/Makefile.am:
+        * protocols/ace/TMCast/Makefile.am:
+
+          Change includedir to omit the "protocols" subdirectory.
+
+          The header files for these libraries are intended to be
+          installed in ${prefix}/include/ace/{HTBP,RMCast,TMCast}
+          not ${prefix}/include/protocols/ace/{HTBP,RMCast,TMCast}.
+
 Wed Nov 15 01:11:02 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>
 
         * ace/Makefile.am:
